# CITS2002-Project1

./: CMakeLists.txt  assumptions.txt  build.py
src/: main.c  ml_codegen.c  ml_codegen.h  ml_compile.c  ml_compile.h  ml_exec.c  ml_exec.h  ml_memory.c  ml_memory.h  ml_token.c  ml_token.h
test/: base.cc  base.h  main.cc  test_compile.cc  test_exec.cc  test_token.cc
